[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid"] }
uuid = { version = "1.18.1", features = ["v7", "serde"] }
