[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "time",
  "chrono",
] }
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
tracing = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v7", "serde"] }
